# python-rds-ref

./: README.md  catalog-info.yaml  pyproject.toml
.github/workflows/: ci.yaml  docs.yaml
docker/: Dockerfile
python_rds_ref/: dataserver.py
techdocs/: mkdocs.yml
techdocs/docs/: index.md
