[tool.poetry]
name = "python-rds-ref"
version = "0.1.1"
description = ""
authors = ["Hamada Gasmallah <hamada@distributive.network>"]
readme = "README.md"
packages = [{include = "python_rds_ref"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dataserver = "python_rds_ref.dataserver:cli"
